--- a/introductionToSpringBoot/src/main/resources/application.properties
+++ b/introductionToSpringBoot/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=introductionToSpringBoot
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:/home/sivapriyan/Documents/Spring Boot/db
+spring.datasource.username=sivaDB
+spring.datasource.password=siva123
+spring.jpa.hibernate.ddl-auto=update
